WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303355
[AutoFill Debugging] Text extraction can incorrectly omit text from links
https://bugs.webkit.org/show_bug.cgi?id=303355
Summary
[AutoFill Debugging] Text extraction can incorrectly omit text from links
Wenson Hsieh
Reported
2025-12-01 19:06:20 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-12-01 19:06:26 PST
<
rdar://problem/165665247
>
Wenson Hsieh
Comment 2
2025-12-01 19:15:46 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54672
EWS
Comment 3
2025-12-02 08:05:53 PST
Committed
303756@main
(87e6806cfe50): <
https://commits.webkit.org/303756@main
> Reviewed commits have been landed. Closing PR #54672 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug